--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "auto:announcements": "node scripts/autoAnnouncements.js"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -16,7 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
-    "nodemailer": "^7.0.13",
+    "nodemailer": "^8.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
