--- a/backend/.env
+++ b/backend/.env
@@ -30,7 +30,8 @@
 # =========================
 NODE_ENV=production
 PORT=5000
-OFFICE_IPS=106.51.37.233
+# OFFICE_IPS=106.51.37.233
+DISABLE_OFFICE_IP_CHECK=true
 
 # =========================
 # MongoDB Atlas Connection
